<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <RadioButton
        android:id="@+id/state_seen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_seen" />
    <RadioButton
        android:id="@+id/state_delivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_delivered" />
    <RadioButton
        android:id="@+id/state_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_sent" />
</RadioGroup>