<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_baseline_close_24up" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contact_data_title"
                android:textColor="#222f3e"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_baseline_check_24up" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="90dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgEditContact"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/avatar_contact" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/chat_company_reply_background_color"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:focusable="true"
                android:hint="@string/contact_name_placeholder"
                android:inputType="text"
                android:lines="1"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/chat_company_reply_background_color"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/contact_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/contact_state_placeholder"
                android:inputType="text"
                android:focusable="true"
                android:lines="1"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">

    </RelativeLayout>


</RelativeLayout>