<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetizenUIutama.NetizenMenuActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:visibility="gone"
            android:id="@+id/imageheader"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:src="@drawable/aa"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />


        <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="23dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/gray_dark"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdcontact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#0abde3"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_chat_24" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:background="#A6E7F4"
                    android:textColor="#2B2B2B"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/fakecontact"
                    android:textSize="18dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdfakecall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#ee5253"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_phone_callback" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:background="#F7AEAE"
                    android:textColor="#2B2B2B"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/shareapp"
                    android:textSize="18dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdjigsaw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#feca57"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/extension_24px" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:background="#FEEBC2"
                    android:textColor="#2B2B2B"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/rateApp"
                    android:textSize="18dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdabout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#01a3a4"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_ballot_24" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:background="#AFE2E2"
                    android:textColor="#2B2B2B"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/aboutApp"
                    android:textSize="18dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>





        <LinearLayout
            android:id="@+id/laymore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="23dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="More App - Advertisement"
                    android:textColor="@color/gray_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recmore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp">
            <RelativeLayout
                android:id="@+id/layAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/label"
        android:textStyle="italic" />


</RelativeLayout>